1999-12-02  Chris Cocosco  <crisco@bic.mni.mcgill.ca>

	* MNI/Batch.pm: new option: 'batch_reports'
	("should the underlying batch process run in verbose mode?")
	Unless the user explicitly sets it, this option defaults to
	whatever value 'verbose' has.

	[*Caveat*] the text produced by the underlying process goes to
	STDOUT even if the 'verbose' text (which is produced by Batch.pm)
	is redirected somewhere else by means of the 'loghandle' option

1999-11-30  Chris COCOSCO  <crisco@thaisa.bic.mni.mcgill.ca>

	* MNI/FileUtilities.pm (check_files): documentation fixes.

	* MNI/Batch.pm: documentation fixes.
	(set_undefined_option): made it more robust (now it
	can properly handle the case when the calling package is
	MNI::Spawn and not main:: )
	(StartJob): fixed a bug related to set_undefined_option

	* MNI/Spawn.pod: added a clarification about redirection clobber
	when using batch.

1999-11-17  Chris COCOSCO  <crisco@thaisa.bic.mni.mcgill.ca>

	* MNI/Spawn.pm: added a carp warning about the redirection
	clobber/append when running through batch.

Wed Oct 27 18:38:15 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Batch.pm (create_sync_file): use underscore rather than
 	period to sanitize names; files with leading periods are a
 	nuisance to find using 'ls'.

Tue Oct 26 13:24:13 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Tag.pm (save): don't use self->{_comments} if it
	isn't defined.

	* MNI/Batch.pm (create_sync_file): sanitize sync file names by
	replacing any non-safe character with a period.

Fri Oct 22 17:47:24 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* t/batch.t (test): register programs spawned during the tests.

	* MNI/Batch.pm (QueueCommands): now returns *both* the fail file
	and the finish file names.  For backwards compatibilty, only the 
	finish file is returned in scalar context.

Thu Oct 14 18:34:16 1999  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Tag.pm: add code to update tag coordinates and write tags to